publish nuget on appveyor

--- a/src/SQLiteMQ/SQLiteMQ.fsproj
+++ b/src/SQLiteMQ/SQLiteMQ.fsproj
@@ -61,6 +61,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="paket.references" />
+    <None Include="SQLiteMQ.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
