--- a/src/SQLiteMQ/SQLiteMQ.nuspec
+++ b/src/SQLiteMQ/SQLiteMQ.nuspec
@@ -1,14 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
-    <metadata>
-        <id>SQLiteMQ</id>
-        <version>$version$</version>
-        <authors>Tiny Blue Robots</authors>
-        <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>SQLiteMQ</description>
-        <dependencies>
-            <dependency id="FsPickler" />
-            <dependency id="System.Data.SQLite.Core" />
-        </dependencies>
-    </metadata>
+  <metadata>
+    <id>SQLiteMQ</id>
+    <version>$version$</version>
+    <authors>Tiny Blue Robots</authors>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <description>SQLiteMQ</description>
+    <dependencies>
+      <dependency id="FsPickler" />
+      <dependency id="System.Data.SQLite.Core" />
+    </dependencies>
+    <files>
+      <file src="bin\release\SQLite.Interop.dll" target="lib" />
+    </files>
+  </metadata>
 </package>
