Embed interop and write it out

--- a/src/SQLiteMQ/SQLiteMQ.fsproj
+++ b/src/SQLiteMQ/SQLiteMQ.fsproj
@@ -55,25 +55,6 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <ItemGroup>
-    <Compile Include="MessageQueue.fs" />
-    <None Include="paket.references" />
-    <None Include="SQLiteMQ.nuspec" />
-    <None Include="..\..\packages\System.Data.SQLite.Core\build\net451\x64\SQLite.Interop.dll">
-      <Link>SQLite.Interop.dll</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Numerics" />
-  </ItemGroup>
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.0')">
       <ItemGroup>
@@ -132,4 +113,22 @@
       </ItemGroup>
     </When>
   </Choose>
+  <ItemGroup>
+    <Compile Include="MessageQueue.fs" />
+    <None Include="paket.references" />
+    <None Include="SQLiteMQ.nuspec" />
+    <EmbeddedResource Include="..\..\packages\System.Data.SQLite.Core\build\net451\x86\SQLite.Interop.dll">
+      <Link>SQLite.Interop.dll</Link>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="mscorlib" />
+    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Numerics" />
+  </ItemGroup>
 </Project>
