--- a/src/SQLiteMQ/SQLiteMQ.fsproj
+++ b/src/SQLiteMQ/SQLiteMQ.fsproj
@@ -58,7 +58,7 @@
   <ItemGroup>
     <Compile Include="MessageQueue.fs" />
     <None Include="paket.references" />
-    <None Include="SQLiteMQ.nuspec" />
+    <None Include="paket.template" />
     <EmbeddedResource Include="..\..\packages\System.Data.SQLite.Core\build\net451\x64\SQLite.Interop.dll">
       <Link>SQLite.Interop.dll</Link>
     </EmbeddedResource>
