--- a/src/SQLiteMQ.Tests/SQLiteMQ.Tests.fsproj
+++ b/src/SQLiteMQ.Tests/SQLiteMQ.Tests.fsproj
@@ -9,9 +9,10 @@
     <OutputType>Library</OutputType>
     <RootNamespace>SQLiteMQ.Tests</RootNamespace>
     <AssemblyName>SQLiteMQ.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
-    <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
     <Name>SQLiteMQ.Tests</Name>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
